// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fixtures: basic.md 1`] = `
[
  {
    "column": 7,
    "endColumn": 10,
    "endLine": 1,
    "line": 1,
    "message": "\`ani\` is misspelt; did you mean \`an\`, \`and\`, \`ans\`, \`ant\`, \`anti\`, \`any\`, \`bani\`, \`uni\`, \`Agni\`, \`AI\`, \`Ali\`, \`Ana\`, \`Ann\`, \`ANSI\`, \`API\`, \`AVI\`, \`MANI\`, \`Ni\`?
reference: -",
    "nodeType": "Program",
    "ruleId": "retext/ani",
    "severity": 1,
  },
  {
    "column": 4,
    "endColumn": 18,
    "endLine": 3,
    "line": 3,
    "message": "\`productentries\` is misspelt
reference: -",
    "nodeType": "Program",
    "ruleId": "retext/productentries",
    "severity": 1,
  },
  {
    "column": 4,
    "endColumn": 22,
    "endLine": 4,
    "line": 4,
    "message": "\`integrationclasses\` is misspelt
reference: -",
    "nodeType": "Program",
    "ruleId": "retext/integrationclasses",
    "severity": 1,
  },
]
`;

exports[`fixtures: basic.md 2`] = `
"# I'm ani typo.

## productentries
## integrationclasses

![GitHubb](githhub.com)
"
`;

exports[`fixtures: basic.txt 1`] = `
[
  {
    "column": 5,
    "endColumn": 8,
    "endLine": 1,
    "line": 1,
    "message": "\`ani\` is misspelt; did you mean \`an\`, \`and\`, \`ans\`, \`ant\`, \`anti\`, \`any\`, \`bani\`, \`uni\`, \`Agni\`, \`AI\`, \`Ali\`, \`Ana\`, \`Ann\`, \`ANSI\`, \`API\`, \`AVI\`, \`MANI\`, \`Ni\`?
reference: -",
    "nodeType": "Program",
    "ruleId": "retext/ani",
    "severity": 1,
  },
  {
    "column": 1,
    "endColumn": 15,
    "endLine": 3,
    "line": 3,
    "message": "\`productentries\` is misspelt; did you mean ?
reference: -",
    "nodeType": "Program",
    "ruleId": "retext/productentries",
    "severity": 1,
  },
  {
    "column": 1,
    "endColumn": 19,
    "endLine": 4,
    "line": 4,
    "message": "\`integrationclasses\` is misspelt; did you mean ?
reference: -",
    "nodeType": "Program",
    "ruleId": "retext/integrationclasses",
    "severity": 1,
  },
]
`;

exports[`fixtures: basic.txt 2`] = `
"I'm ani typo.

productentries
integrationclasses
"
`;
